# citibike_mlops

./: .env.example  .gitignore  Dockerfile.airflow  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py
dags/: citibike_pipeline.py
db_init/: schema.sql
service/fastapi/: Dockerfile  app.py
src/ml/: __init__.py  features.py  train.py
