[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "citibike-ml"
version = "0.1.0"
description = "ML code for the Citi Bike Airflow pipeline (features & training)."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Your Name" }]
# If you have a LICENSE file, prefer: license = { file = "LICENSE" }
# Otherwise you can set license text, e.g.: license = { text = "MIT" }
dependencies = [
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "pyarrow>=15.0",
  "requests>=2.31"
]

[project.scripts]
ml-features = "ml.features:main"
ml-train    = "ml.train:main"

[project.urls]
Homepage = "https://example.com/your-repo"
Issues   = "https://example.com/your-repo/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "black>=24.3",
  "mypy>=1.8",
  "build>=1.2"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["ml*"]

